fix desktop version boostrap issue